--- a/requirements.txt
+++ b/requirements.txt
@@ -3,22 +3,36 @@ anyio==4.12.1
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
+contourpy==1.3.3
 cryptography==46.0.4
+cycler==0.12.1
 distro==1.9.0
+fonttools==4.61.1
 google-auth==2.48.0
 google-genai==1.61.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+kiwisolver==1.4.9
+matplotlib==3.10.8
+numpy==2.4.2
+packaging==26.0
+pandas==3.0.0
+pathlib==1.0.1
+pillow==12.1.0
 pyasn1==0.6.2
 pyasn1_modules==0.4.2
 pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 requests==2.32.5
 rsa==4.9.1
+seaborn==0.13.2
+six==1.17.0
 sniffio==1.3.1
 tenacity==9.1.2
 typing-inspection==0.4.2
