--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ executing==2.2.1
 filelock==3.20.3
 fonttools==4.61.1
 fsspec==2026.1.0
+gensim==4.4.0
 google-auth==2.48.0
 google-genai==1.61.0
 h11==0.16.0
@@ -93,6 +94,7 @@ regex==2026.1.15
 requests==2.32.5
 rsa==4.9.1
 safetensors==0.7.0
+scikit-learn==1.8.0
 scipy==1.17.0
 seaborn==0.13.2
 setuptools==80.10.2
@@ -109,6 +111,7 @@ sympy==1.14.0
 tenacity==9.1.2
 textstat==0.7.12
 thinc==8.3.10
+threadpoolctl==3.6.0
 tiktoken==0.12.0
 tokenizers==0.22.2
 torch==2.10.0
@@ -126,3 +129,4 @@ wcwidth==0.5.3
 weasel==0.4.3
 websockets==15.0.1
 wrapt==2.1.1
+xgboost==3.1.3
