--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ matplotlib==3.10.8
 matplotlib-inline==0.2.1
 mpmath==1.3.0
 murmurhash==1.0.15
+narwhals==2.16.0
 nest-asyncio==1.6.0
 networkx==3.6.1
 nltk==3.9.2
@@ -73,6 +74,7 @@ pathlib==1.0.1
 pexpect==4.9.0
 pillow==12.1.0
 platformdirs==4.5.1
+plotly==6.5.2
 preshed==3.0.12
 prompt_toolkit==3.0.52
 psutil==7.2.2
