--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+accelerate==1.12.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.12.1
 asttokens==3.0.1
+attrs==25.4.0
 blis==1.3.3
 catalogue==2.0.10
 certifi==2026.1.4
@@ -16,14 +21,19 @@ cuda-bindings==12.9.4
 cuda-pathfinder==1.3.3
 cycler==0.12.1
 cymem==2.0.13
+datasets==4.5.0
 debugpy==1.8.20
 decorator==5.2.1
+dill==0.4.0
 distro==1.9.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+evaluate==0.4.6
 executing==2.2.1
+fastjsonschema==2.21.2
 filelock==3.20.3
 fonttools==4.61.1
-fsspec==2026.1.0
+frozenlist==1.8.0
+fsspec==2025.10.0
 gensim==4.4.0
 google-auth==2.48.0
 google-genai==1.61.0
@@ -39,6 +49,8 @@ ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.3
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
 jupyter_client==8.8.0
 jupyter_core==5.9.1
 kiwisolver==1.4.9
@@ -46,8 +58,11 @@ MarkupSafe==3.0.3
 matplotlib==3.10.8
 matplotlib-inline==0.2.1
 mpmath==1.3.0
+multidict==6.7.1
+multiprocess==0.70.18
 murmurhash==1.0.15
 narwhals==2.16.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.6.1
 nltk==3.9.2
@@ -71,15 +86,18 @@ packaging==26.0
 pandas==3.0.0
 parso==0.8.5
 pathlib==1.0.1
+peft==0.18.1
 pexpect==4.9.0
 pillow==12.1.0
 platformdirs==4.5.1
 plotly==6.5.2
 preshed==3.0.12
 prompt_toolkit==3.0.52
+propcache==0.4.1
 psutil==7.2.2
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==23.0.0
 pyasn1==0.6.2
 pyasn1_modules==0.4.2
 pycparser==3.0
@@ -92,8 +110,10 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 PyYAML==6.0.3
 pyzmq==27.1.0
+referencing==0.37.0
 regex==2026.1.15
 requests==2.32.5
+rpds-py==0.30.0
 rsa==4.9.1
 safetensors==0.7.0
 scikit-learn==1.8.0
@@ -132,3 +152,5 @@ weasel==0.4.3
 websockets==15.0.1
 wrapt==2.1.1
 xgboost==3.1.3
+xxhash==3.6.0
+yarl==1.22.0
